--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gitbook-plugin-theme-default",
-  "description": "Default theme for GitBook",
+  "name": "gitbook-plugin-theme-docs-hengshi",
+  "description": "Theme for Hengshi documents",
   "main": "./index.js",
   "version": "1.0.7",
   "engines": {
@@ -25,17 +25,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GitbookIO/theme-default.git"
+    "url": "https://github.com/henglabs/theme-docs-hengshi.git"
   },
-  "author": "FriendCode Inc. <contact@gitbook.com>",
+  "author": "Hengshi Inc. <support@hengshi.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/GitbookIO/theme-default/issues"
+    "url": "https://github.com/henglabs/theme-docs-hengshi/issues"
   },
   "contributors": [
     {
-      "name": "Samy Pessé",
-      "email": "samy@gitbook.com"
+      "name": "Thomas Chan",
+      "email": "chenjunhao5818@gmail.com"
     }
   ],
   "gitbook": {
@@ -47,26 +47,6 @@
           "website": {
             "title": "Stylesheet for website output",
             "default": "styles/website.css"
-          },
-          "pdf": {
-            "title": "Stylesheet for PDF output",
-            "default": "styles/pdf.css"
-          },
-          "epub": {
-            "title": "Stylesheet for ePub output",
-            "default": "styles/epub.css"
-          },
-          "mobi": {
-            "title": "Stylesheet for Mobi output",
-            "default": "styles/mobi.css"
-          },
-          "ebook": {
-            "title": "Stylesheet for ebook outputs (PDF, ePub, Mobi)",
-            "default": "styles/ebook.css"
-          },
-          "print": {
-            "title": "Stylesheet to replace default ebook css",
-            "default": "styles/print.css"
           }
         }
       },
