--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "properties": {
           "website": {
             "title": "Stylesheet for website output",
-            "default": "styles/website.css"
+            "default": "gitbook/website.css"
           }
         }
       },
